--- a/TheBeanQuartet-master/src/main/webapp/edit_backup.html
+++ b/TheBeanQuartet-master/src/main/webapp/edit_backup.html
@@ -62,7 +62,7 @@
 			</div>
 
 			<br>
-			<div id="playlist-name" class="form-group">
+			<div id="playlist-name" class="form-group" style="display: none;">
 				<label>Change Playlist Name:</label> <br> 
 				<input type="text" class="form-control bfh-text" placeholder="New Playlist Name" id="newPlaylistName">
 			</div>
