--- a/TheBeanQuartet-master/src/main/webapp/import_backup.html
+++ b/TheBeanQuartet-master/src/main/webapp/import_backup.html
@@ -25,7 +25,7 @@
 			<input id="formInput" type="file">
 			<br>
 			<br>
-			<input type="submit" id="Login-btn" class="login login-submit" value="Login">
+			<input type="submit" id="Login-btn" class="login login-submit" value="Submit">
 		</form>
 	</div>
 
